Removed unused API library

--- a/craftersmine.LeagueBalancer/craftersmine.LeagueBalancer.csproj
+++ b/craftersmine.LeagueBalancer/craftersmine.LeagueBalancer.csproj
@@ -6,12 +6,12 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <Company>craftersmine</Company>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="craftersmine.League.CommunityDragon" Version="0.3.2-dev" />
     <PackageReference Include="craftersmine.Riot.Api.League.Mastery" Version="0.1.0-dev" />
-    <PackageReference Include="craftersmine.Riot.Api.League.Matches" Version="0.1.0-dev" />
     <PackageReference Include="craftersmine.Riot.Api.League.SummonerLeagues" Version="0.1.0-dev" />
     <PackageReference Include="craftersmine.Ui.League" Version="1.1.4" />
   </ItemGroup>
