Added showing RiotID in summoners list with new RiotID changes

--- a/craftersmine.LeagueBalancer/craftersmine.LeagueBalancer.csproj
+++ b/craftersmine.LeagueBalancer/craftersmine.LeagueBalancer.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="craftersmine.League.CommunityDragon" Version="0.3.2-dev" />
+    <PackageReference Include="craftersmine.Riot.Api.Account" Version="0.2.1-dev" />
     <PackageReference Include="craftersmine.Riot.Api.League.Mastery" Version="0.2.1-dev" />
     <PackageReference Include="craftersmine.Riot.Api.League.SummonerLeagues" Version="0.2.1-dev" />
     <PackageReference Include="craftersmine.Ui.League" Version="1.1.4" />
